style/viewer.css
/* Viewer */
#viewer {
    background-color: #004e74;
    width: 100%;
    height: calc(100% - 90px);
    padding: 20px;
}

#Description {
    font-size: 20px;
}


/* Viewer options an index bar */
#viewerBar {
    background-color: #0098ba;
    width: 100%;
    height: 70px;
}

#viewerBar #index {
    display: inline;
    position: relative;
    float: left;
    text-align: center;
    height: 100%;
    width: 100%;
    padding: 10px;
}

#viewerBar #index #holder {
    display: inline-block;
    background-color: white;

    height: 100%;

    border: 1px;
    border-radius: 30px;
}

#viewerBar span {
    color: #004e74;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 45px;
    font-weight: bold;
    padding: 0 25px;
}

#viewerBar span#current {
    color: #0098ba;
}

#viewerBar span#slash {
    
    padding: 0;
    
    /*
    padding: 0px;
    display: inline-block;
    position: relative;
    z-index: 3;
    height: 50px;
    width: 5px;

    border: 1px;
    border-radius: 30px;
    border-color: #004e74;
    background-color: #004e74;

    transform: rotate(25deg);*/

}

#viewerBar #optionBtns
{
    display: inline-block;
    padding-top: 2.5px;
    padding-bottom: 2.5px;
    margin-right: 50px;
    float: right;

    position: relative;
    top: -70px;
}

#viewerBar #optionBtns div
{
    display: inline-block;
    vertical-align: top;
    float: right;
    margin-left: 2.5px;
    margin-left: 2.5px;
}

#viewerBar #optionBtns button
{
    height: 60px;
    width: 60px;
    
    display: inline-block;

    padding: 5px;

    border: 1px;
    border-radius: 50%;
    border-color: #004e74;
    background-color: #004e74;
}

#viewerBar #optionBtns button:hover img
{
    height: calc(85% - 5px);
    width: calc(85% - 5px); 
}

#viewerBar #optionBtns button img {
    height: calc(80% - 5px);
    width: calc(80% - 5px);
    padding: 5px;
}

#viewerBar #optionBtns select
{
    position: relative;
    top: -18px;
    z-index: 1;
    
    display: none;
    width: 100px;
    height: 25px;
    
    font-size: 18px;
    
    border: none;
    
    background-color: #004e74;
    color: white;
}

/* viewer forward/backward buttons */
.viewerNav {
    display: inline-block;
    float: left;

    
    position: relative;
    top: calc(50% - 50px)

}

.viewerNav#back {
    margin-left: calc(20% - 110px);
    margin-right: 10px;
}

.viewerNav#forward {
    margin-right: calc(20% - 110px);
    margin-left: 10px;
}

.viewerNav button {
    height: 100px;
    width: 100px;
    vertical-align: middle;
    background-color: #004e74;
    padding: 5px;

    border-style: none;
}

.viewerNav button:hover {
    padding: 0px;
}

.viewerNav #btn {
    height: 100%;
    width: 30%;

    padding-top: 25%;
    padding-bottom: 25%;
}

.viewerNav#back #btn {
    position: relative;
    float: left;
}

.viewerNav#forward #btn {
    position: relative;
    float: right;
}

.viewerNav #icon {
    height: 60%;
    width: 70%;

    padding: 10px;
    padding-bottom: 2px;
    padding-top: 8px;
}

.viewerNav#back #icon {
    position: relative;
    float: right;
}

.viewerNav#forward #icon {
    position: relative;
    float: left;
}

.viewerNav #num {
    display: inline-block;
    width: 70%;

    color: #0098ba;
    font-family: Arial, Helvetica, sans-serif;
    font-weight: bold;
    font-size: 40px;

    padding-left: 10px;
    padding-right: 10px;
}

.viewerNav#back #num {
    position: relative;
    float: right;
}

.viewerNav#forward #num {
    position: relative;
    float: left;
}

/* Viewer content */
#viewer .content {
    display: inline-block;
    float: left;

    width: 60%;

    height: 100%;

    position: relative;
    margin-left: auto;
    margin-right: auto;
    /* not extact color */
    background-color: #002e45;
}

.content #currentOverlay {
    width: 100%;

    height: 50px;

    /* not extact color */
    background-color: #002e45;

    opacity: .7;
    position: relative;
    z-index: 1;

    text-align: center;
}

#currentOverlay img {
    height: 30px;
    width: 30px;
    margin: 10px;
    margin-right: 1px;
    display: inline-block;
}

#currentOverlay span {
    display: inline-block;

    margin: 5px;
    margin-left: 1px;

    color: white;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 30px;

    position: relative;
    top: -15px;
}


.content #visuals
{

    position: relative;
    top: -50px;

    margin-top: 10px;
    margin-bottom: 10px;
    margin-left: auto;
    margin-right: auto;
    

    height: calc(50% - 20px);
    width: 100%;
    
    transition: height .6s;
}


#visuals video
{
    height: 100%;
    width: auto;
    
    max-width: 100%;
    
    position: relative;
    margin-left: auto;
    margin-right: auto;
}

#visuals img
{
    height: 100%;
    width: auto; 
    
    max-width: 100%;
    
    position: relative;
    margin-left: auto;
    margin-right: auto;
}

.content #story
{

    position: relative;
    vertical-align: bottom;
    top: calc(-50px);
    height: calc(50% - 50px);
    background-color: #0098ba;
    padding: 5px;
    padding-left: 30px;
    padding-right: 30px;
    line-height: 40px;
    
    overflow-y: auto;
    
    transition: height .6s, opacity .4s;
    
    
    font-family: Arial, Helvetica, sans-serif;
    font-size: 24px;
    color: white;
}

.content #story.hideAnim
{
    height: 0px;
    overflow: hidden;
    opacity: 0;
}

.content #storyToggle
{
    height: 50px;
    width: 100%;
    
    position: relative;
    top: calc(-50px);
    
    opacity: .9;
}

.content #storyToggle button{
    height: 50px;
    width: 50px;

    border: 1px;
    border-radius: 50% 50% 0 0;
    border-color: #004e74;
    background-color: #004e74;

    position: relative;
    left: calc(25px - 50%);
    z-index: 3;

    float: right;
}

.content #storyToggle button img {
    height: 40px;
    width: 40px;
    opacity: 1.3;
    padding: 5px;

}

/* Glossary Terms */
.glossary
{
    position: relative;
    
    padding-left: 5px;
    padding-right: 5px;
    
    background-color: #004e74;
    border-color: #004e74;
    border-style: solid;
    border-radius: 15px;

    
    transition: border-color .6s;
}

.glossary:hover
{
    border-color: white;
}

/* details and social */
#details {
    width: 50%;
    margin-left: 25%;
    margin-right: 25%;
    text-align: left;
}

.social {
    display: inline-block;
    height: 40px;
    border-style: solid;
    border-radius: 25px;
    border: 2px;

    color: #0098ba;
    border-color: #0098ba;
    border-style: solid;
    padding-left: 10px;

    right: 10px;


    vertical-align: middle;



}

.social span {

    top: -6px;
    left: -7px;
    position: relative;
}

.socialExport span {


    top: -6px;
    position: relative;

}

#social {
    padding-top: 10px;
}

#title {
    height: 30px;
    margin-top: 5px;
    margin-bottom: 5px;

    display: block;

}

#uploader {

    height: 30px;
    margin-top: 5px;
    margin-bottom: 5px;
    display: inline-block;

}

#uploader img {
    height: 30px;
    width: 30px;
    position: relative;
    top: 7px;
    padding-right: 5px;
}

.socialExport {
    display: inline-block;
    height: 40px;
    border-style: solid;
    border-radius: 25px;
    border: 2px;

    color: white;
    background-color: #0098ba;
    border-color: #0098ba;
    border-style: solid;
    padding-left: 10px;
    overflow: hidden;

    width: 110px;

    vertical-align: middle;

}

#uploader {}

#tags {
    padding-top: 10px;
    color: #004e74;
    padding-bottom: 10px;

}

#genres {
    padding-top: 10px;
    color: #004e74;

}

.category {
    border-style: solid;
    border-radius: 25px;
    border: 2px;
    border-color: #004e74;
    border-style: solid;
    text-align: center;
    padding-right: 10px;
    margin-right: 10px;
    padding-left: 10px;
    background-color: #004e74;
    display: inline-block;
    color: white;
}

.social img {
    width: 30px;
    height: 30px;
    margin-right: 10px;
    position: relative;
    top: 3px;
}

.socialExport img {

    width: 30px;
    height: 30px;
    margin-right: 10px;
    position: relative;
    top: 3px;
}

#more-stories {
    height: 30%;



}

#more-author {
    height: 30%;
}

.carousel {
    width: 100%;


}

/* The Modal (background) */
input[type=password],
input[type=usr],
input[type=email] {
    width: 100%;
    padding: 12px 20px;
    margin: 8px 0;
    display: inline-block;
    border: 1px solid #ccc;
    box-sizing: border-box;
}

.modal {


    font-family: Arial, Helvetica, sans-serif;
    text-align: center;
    background-color: #0098ba;
    color: #ffffff;
    
    /*Trying to implement stuff */
    display: none;
    /* Hidden by default */
    position: fixed;
    /* Stay in place */
    z-index: 4;
    /* Sit on top */
    left: 0;
    top: 0;
    width: 100%;
    /* Full width */
    height: 100%;
    /* Full height */
    overflow: auto;
    /* Enable scroll if needed */
    background-color: rgb(0, 0, 0);
    /* Fallback color */
    background-color: rgba(0, 0, 0, 0.4);
    /* Black w/ opacity */
    padding-top: 60px;

}

/* Modal Content/Box */
.modal-content {
    background-color: #fefefe;
    margin: 5% auto 15% auto;
    /* 5% from the top, 15% from the bottom and centered */
    border: 5px solid white;
    border-radius: 20px;
    width: 85%;
    height: 600px;
    /* Could be more or less, depending on screen size */
}


/* The Close Button (x) */
.close {
    position: absolute;
    right: 25px;
    top: 0;
    color: #000;
    font-size: 35px;
    font-weight: bold;
}
#likeClick:hover{
    color:white;
    background-color:#0098ba;
}
.close:hover,
.close:focus {
    color: red;
    cursor: pointer;
}

#containedButton {
    margin-top: 10px;
}

#containedCancel {
    margin-top: 10px;
}

.container
{
    width: 100%;
    height: 590px;
}

#definitionContainer {
    display: block;
    margin: 0 auto;
    width: 60%;
    height: 90%;
    color: black;
    
    margin: 2.5%;
    
    padding: 20px;
   
   
    border-style: solid;
    border-radius: 20px;
    border-right: 200px;
    border-color: white;
    
    float: right;
    text-align: left;
    
    background-color: #a0eaf7;

    font-size: 30px;
    font-style: bold;
    
}
#definitionContainer h1{
    color: #004e74;
    margin:0;
}
#mediaContainer {
    display: block;
    width: 30%;
    height: 90%;
    
    margin: 2.5%;
    

    border-style: none;
    border-radius: 10px;
    float: left;
}

.media{
    height: 50%;
    
    padding: 5px;
}

#mediaImage{
    height: 50%;
    
    padding: 5px;
    
    background-color: #a0eaf7;
}
#mediaContainer video{
    height: auto;
    width: 100%;
    
    max-height: 90%;
}
#mediaContainer img{
    height: 100%;
    width: auto;
    
    max-width: 100%;
}

/* Add Zoom Animation */
.animate {
    -webkit-animation: animatezoom 0.6s;
    animation: animatezoom 0.6s
}

@-webkit-keyframes animatezoom {
    from {
        -webkit-transform: scale(0)
    }

    to {
        -webkit-transform: scale(1)
    }
}

@keyframes animatezoom {
    from {
        transform: scale(0)
    }

    to {
        transform: scale(1)
    }
}

